# predictivebenchmarking

./: .gitignore  config.sh  exp_navigator.txt  indicazioni tesi
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/: libRobotNavigator.so.REMOVED.git-id  libcostmap_2d.so.REMOVED.git-id  libexploration_planner.so.REMOVED.git-id  liblayers.so.REMOVED.git-id  libmove_base.so.REMOVED.git-id
exp_outputs/f52/: Terror1.error  f52-temp.relations  f52.log.REMOVED.git-id  f52.relations  f52Bag.bag.REMOVED.git-id  f52Out.log.REMOVED.git-id  f52_exp.pgm.REMOVED.git-id  f52_exp.yaml
exp_outputs/lab_a/: Terror1.error  lab_a-temp.relations  lab_a.pgm.REMOVED.git-id  lab_a.relations  lab_a.yaml  lab_aBag.bag.REMOVED.git-id  lab_aOut.log.REMOVED.git-id  lab_a_incompleto.pgm.REMOVED.git-id
launch/: custom.rviz  exploreambient.launch  exploreambient_gmapping.launch  exploreambient_gmapping_headless.launch  exploreambient_headless.launch  exploreambient_karto.launch  exploreambient_karto_headless.launch  exploreambient_nav2d.launch  exploreambient_noise.launch  exploreambient_robocom.launch  exploreambient_robocom_manual.launch  exploreambient_test.launch  frames.gv  frontier_expl.launch  hector.launch  manualnavigation.launch  replay.launch  slam_config.xml
metricEvaluator/: Makefile  frames.gv  logutil.cpp  logutil.h  metricEvaluator  metricEvaluator.cpp  metricEvaluatorLaunch.py  statistics.h  structs.h
nav2dfiles/: 889_05.world  Mymap1.world  autolab.world  cave.world  freiburg.world  freiburg101.world  freiburg52.world  freiburg52_exp.world  freiburg52_furnitures.world  freiburg79.world  frieburg.world  hokuyo.inc  lab_a.world  lab_b.world  lab_b_furnitures.world  lab_c.world  lab_d.world  lab_intel.world  lab_ipa.world  lab_ipa_furnitures.world  mymap2.world  mymap3.world  office_b.world  office_c.world  office_d.world  office_d_furnitures.world  office_e.world  office_f.world  office_g.world  office_h.world  office_h_furnitures.world  office_i.world  office_i_furnitures.world  p3at.inc  simple_rooms.world
outputs/: acesOrdered.relations  b.bag  generateRelations-exp.py  generateRelations.py  generateRelationsOandR.py  plotStuff.py  plotter.py  prova.relations  summary.error
papers/: 07484706.pdf.REMOVED.git-id  A_reference_system_for_indoor_localizati.pdf.REMOVED.git-id  Quattrini Li et al. - Experimental comparison of open source vision-based state estimation algorithms - ISER2016.pdf.REMOVED.git-id  heritage.pdf.REMOVED.git-id  kuemmerl09auro.pdf.REMOVED.git-id
predictor/: .accuracy.txt  analyzer.py  batch_extract.py  install-getnonfreefonts  minibatch.py  minibatch_old.py  nuovo_main_batch.py  parameters.py  predictor.py  svr.txt  svr_poly.txt  svr_poly_all.txt  svr_poly_top_3.txt  svr_rbf.txt  svr_rbf_all.txt  svr_rbf_top_3.txt
python/: addMITscale.py  adjust_metric.py  adjust_output.py  avg.py  compare_images.py  csv_to_rosbag.py  generateAll.py  launch.py  manuallaunch.py  mv_subfolders.py  param  plot_GT.py  plot_MIT.py  quat2EulerGT.py  quat2EulerRobocom.py  recompute_metric.py  rename_logs.py  rescaler.py  summary.error  template.world  writeTextonImage.py  writecsv.py  xmlToWorld.py
src/: ros-kinetic-libdlib_0.6.11-0xenial-20170717-075340-0800_amd64.deb
src/kinect_proximity_safety_controller/: CMakeLists.txt  package.xml
src/kinect_proximity_safety_controller/include/kinect_proximity_safety_controller/: safety_controller.h
src/kinect_proximity_safety_controller/src/: safety_controller.cpp
src/kinect_proximity_safety_controller/src/nodes/: robocom_safety_controller_node.cpp
src/navigation/clear_inner_costmap/: CMakeLists.txt  package.xml  recovery_plugin.xml
src/navigation/clear_inner_costmap/include/clear_inner_costmap/: clear_inner_costmap.h
src/navigation/clear_inner_costmap/src/: clear_inner_costmap.cpp
src/range_proximity_safety_controller/: CMakeLists.txt  LICENSE  README.md  package.xml  range_proximity_safety_controller.kdev4
src/range_proximity_safety_controller/config/: range_proximity_safety_ctrl_param  range_proximity_safety_ctrl_param~
src/range_proximity_safety_controller/include/range_proximity_safety_controller/: safety_controller.h
src/range_proximity_safety_controller/launch/: proximity_range_safety_controller_node.launch  range_safety_controller.launch  range_safety_controller.launch~
src/range_proximity_safety_controller/plugins/: nodelet_plugins.xml
src/range_proximity_safety_controller/src/: safety_controller.cpp
src/range_proximity_safety_controller/src/nodes/: beebot_safety_controller_node.cpp
src/robocom/: CMakeLists.txt  package.xml
src/robocom/devel/: _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
src/robocom/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
src/robocom/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
src/robocom/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
src/robocom/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
src/robocom/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
src/robocom/include/robocom/: EuleroOdometry.h  Odometry.h  PathPublisher.h  RungeKutta4Odometry.h
src/robocom/launch/: demo_odometry.launch  hokuyo_nodes.launch  path_node.launch  robocom.launch  robocom_minimal.launch  sick_node.launch
src/robocom/params/: teleop.yaml  teleop_triskarone.yaml
src/robocom/src/: EuleroOdometry.cpp  Odometry.cpp  OdometryNode.cpp  PathNode.cpp  PathPublisher.cpp  RungeKutta4Odometry.cpp
src/robocom/src/old/: filters.py  teleop_camera.py
src/robocom/udev/: 50-robocom.rules  README.md
src/ros-rosserial_core/: CMakeLists.txt  README.md  package.xml
src/ros-rosserial_core/launch/: serial_node.launch
src/ros-rosserial_core/src/ros_lib/: CoreHardware.h  ros.h
src/ros-rosserial_core/src/ros_lib/examples/pubsub/: pubsub_test.cpp
src/ros-rosserial_core/src/rosserial_core/: make_libraries.py
utils/: bag2lz4.sh  pgm2png-auto.sh  pgm2png.sh  rmpgm.sh  yamlify.sh
(+10215 files in other folders)
