<?xml version="1.0"?>
<package>
  <name>robocom</name>
  <version>0.1.0</version>
  <description>The robocom package</description>
  
  <maintainer email="matteo.luperto@polimi.it">matteo luperto</maintainer>
  <license>GPLv3</license>

  <build_depend>robocom_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
