<package>
  <name>rosserial_core</name>
  <version>0.1.0</version>
  <description>
    Libraries and examples for ROSserial usage on Nova Core modules.
  </description>
  <author>Martino Migliavacca</author>
  <maintainer email="m.migliavacca@novalabs.io">Martino Migliavacca - Nova Labs</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rosserial_core</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rosserial_msgs</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>message_runtime</run_depend>
</package>


